# motif_finder_cuda

./: .clang-format  .gitattributes  CMakeLists.txt  LICENSE  LICENSE.MIT  README.md  running_on_nusc_cluster.md
benchmark_common_lib/: CMakeLists.txt  benchmark_common.cpp  benchmark_common.h  parse_helper.cpp  parse_helper.h  sequence_generator.cpp  sequence_generator.h
benchmark_cpu/: CMakeLists.txt  cmd_parser.cpp  cmd_parser.h  main.cpp  test.fst
benchmark_gpu/: CMakeLists.txt  cmd_parser.cpp  cmd_parser.h  main.cpp
common_lib/: CMakeLists.txt  SequenceHashes.h  config.h  fst_reader.cpp  fst_reader.h  gmps.cpp  gmps.h  run_parallel.cpp  run_parallel.h  safe_counter.h  sequence_hashes.h  sequence_nums.h  timer.h
conversion_lib/: CMakeLists.txt  hash_conversions.cpp  hash_conversions.h  hash_conversions_x4.cpp  hash_conversions_x4.h  letter_conversions.cpp  letter_conversions.h  match_functions.cpp  match_functions.h  sequence_hashes_utils.cpp  sequence_hashes_utils.h  sequences_to_hashes.cpp  sequences_to_hashes.h  sequences_to_nums.cpp  sequences_to_nums.h
cpu_lib/: CMakeLists.txt  CpuCommonAlgorithm.cpp  CpuCommonAlgorithm.h  ExternalCpuAlgorithm.cpp  ExternalCpuAlgorithm.h  InternalCpuAlgorithm.cpp  InternalCpuAlgorithm.h  cpu_common_algorithm.cpp  cpu_common_algorithm.h  cpu_range_motif_finder.cpp  cpu_range_motif_finder.h  external_cpu_algorithm.cpp  external_cpu_algorithm.h  i_range_motif_finder.h  internal_cpu_algorithm.cpp  internal_cpu_algorithm.h  internal_gpu_algorithm.h  motif_finder_cpu_external.cpp  motif_finder_cpu_external.h  motif_finder_cpu_internal.cpp  motif_finder_cpu_internal.h
gpu_lib/: CMakeLists.txt  external_gpu_algorithm.cpp  external_gpu_algorithm.h  finder_kernel.cu  finder_kernel.cuh  gpu_cuda_params.h  gpu_info.cpp  gpu_info.h  gpu_memory.cu  gpu_memory.h  gpu_range_motif_finder_external.cpp  gpu_range_motif_finder_external.h  gpu_range_motif_finder_internal.cpp  gpu_range_motif_finder_internal.h  internal_gpu_algorithm.cpp  internal_gpu_algorithm.h  motif_finder_gpu_external.cpp  motif_finder_gpu_external.h  motif_finder_gpu_internal.cpp  motif_finder_gpu_internal.h  sequence_hashes_params.h
iterative_finder_lib/: CMakeLists.txt  argo_cuda_params.h  argo_cuda_params_reader.cpp  argo_cuda_params_reader.h  create_stat_model.cpp  create_stat_model.h  filter_shifted_motifs.cpp  filter_shifted_motifs.h  find_most_important_motif.cpp  find_most_important_motif.h  find_motifs_iterative.cpp  find_motifs_iterative.h  iterative_finder.cpp  iterative_finder.h  motif_data.h  motif_data_utils.cpp  motif_data_utils.h  test.cpp
iterative_finder_lib_tests/: CMakeLists.txt  filter_shifted_motifs_test.cpp
motif_finder/: CMakeLists.txt  create_stat_model.cpp  create_stat_model.h  init.ini  main.cpp
motif_finder_cpu/: CMakeLists.txt  init.ini  main.cpp  neg.fst  test_12.fst
motif_finder_gpu/: CMakeLists.txt  a.txt  init.ini  main.cpp
occurrence_algorithm_lib/: CMakeLists.txt  IAlgorithm.h  IAlgorithmFactory.h  MotifOccurrenceParallelEvaluator.cpp  MotifOccurrenceParallelEvaluator.h
stat_lib/: CMakeLists.txt  bernulli_stat_model.cpp  bernulli_stat_model.h  external_generator_cpu.cpp  external_generator_cpu.h  ideal_stat_model.cpp  ideal_stat_model.h  markov_stat_model.cpp  markov_stat_model.h  probability.cpp  probability.h  stat_model.cpp  stat_model.h
test_data/test_0/: init.ini  pos.fst
test_data/test_1/: pos.fst
test_data/test_2/: init.ini  pos.fst
test_data/test_74/: 74.fst  Description.txt  a74.txt  init.ini
test_data/test_77/: 77.fst  Description.txt  a77.txt  init.ini
